[gd_scene load_steps=2 format=3 uid="uid://xe2sw2am2pur"]

[ext_resource type="Script" uid="uid://c7gqmasmf0eu2" path="res://programa_2.gd" id="1_5n0pi"]

[node name="Programa 2" type="Node2D"]
script = ExtResource("1_5n0pi")

[node name="Label" type="Label" parent="."]
offset_left = 480.0
offset_top = 104.0
offset_right = 720.0
offset_bottom = 127.0
text = "Insira suas informações abaixo"

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 488.0
offset_top = 168.0
offset_right = 720.0
offset_bottom = 199.0
placeholder_text = "Digite seu nome"

[node name="Button" type="Button" parent="."]
offset_left = 552.0
offset_top = 280.0
offset_right = 640.0
offset_bottom = 311.0
text = "Enviar"

[node name="Label2" type="Label" parent="."]
offset_left = 512.0
offset_top = 352.0
offset_right = 680.0
offset_bottom = 400.0

[node name="LineEdit2" type="LineEdit" parent="."]
offset_left = 488.0
offset_top = 224.0
offset_right = 720.0
offset_bottom = 255.0
placeholder_text = "Digite sua idade"

[node name="Label3" type="Label" parent="."]
offset_left = 496.0
offset_top = 416.0
offset_right = 728.0
offset_bottom = 447.0
text = "RESULTADO:"

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
